<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ProfilePage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginBottom="75dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/BodyNoFooter"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/HeaderBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/MyCommunityText"
                    android:text="My Profile"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#303032"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/EditProfile"
                    android:background="@drawable/editlogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ProfileDesc"
                android:layout_below="@id/HeaderBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ProfilePic"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/dummyprofilepic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"/>

                <TextView
                    android:id="@+id/Name"
                    android:layout_below="@id/ProfilePic"
                    android:text="Loading..."
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    android:textColor="#303032"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/Bio"
                    android:layout_below="@id/Name"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="#303032"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_below="@id/Bio"
                    android:id="@+id/Info"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/PostCount"
                        android:layout_marginLeft="40dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/PostNum"
                            android:text="0"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="#303032"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_below="@id/PostNum"
                            android:text="posts"
                            android:textStyle="bold"
                            android:textColor="#303032"
                            android:layout_marginTop="-5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/FollowersCount"
                        android:layout_toRightOf="@id/PostCount"
                        android:layout_marginLeft="55dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/Follower"
                            android:layout_width="37dp"
                            android:layout_height="27dp"
                            android:background="@null"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:text="0"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:layout_below="@id/Follower"
                            android:text="followers"
                            android:textStyle="bold"
                            android:textColor="#303032"
                            android:layout_marginTop="-5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/FollowingCount"
                        android:layout_toRightOf="@id/FollowersCount"
                        android:layout_marginLeft="45dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/Following"
                            android:layout_width="37dp"
                            android:layout_height="27dp"
                            android:background="@null"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="0"
                            android:layout_marginEnd="4dp"/>

                        <TextView
                            android:layout_below="@id/Following"
                            android:text="following"
                            android:textStyle="bold"
                            android:textColor="#303032"
                            android:layout_marginTop="-5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </RelativeLayout>

                <ScrollView
                    android:id="@+id/PostScroll"
                    android:layout_below="@+id/Info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="70dp"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/postRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </ScrollView>

                <RelativeLayout
                    android:layout_below="@+id/PostScroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/LogoutButton"
                        android:layout_centerHorizontal="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Logout"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/rectangle_button_green"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:padding="10dp"/>

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="70dp">

        <Button
            android:id="@+id/Home"
            android:background="@drawable/housesymbolgrey"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/Search"
            android:background="@drawable/searchsymbolgrey"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/Home"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <ImageButton
            android:id="@+id/NewPost"
            android:src="@drawable/plus_sign"
            android:background="@drawable/green_circle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/Search"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/myBtn"
            android:background="@drawable/profilesymbolgreen"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/NewPost"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/Contact"
            android:background="@drawable/contactslogogrey"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/myBtn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

</RelativeLayout>